fix: change z-index

--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -7,7 +7,7 @@
   transform: translateX(-50%);
 
   padding: 1rem;
-  z-index: 12;
+  z-index: 20;
 
   align-items: center;
   justify-content: center;
